# company-wiki

./: .env.example  .gitignore  BUGFIX_REPORT.md  CLAUDE.md  CODE_REVIEW.md  IMPLEMENTATION_STEPS.md  IMPROVEMENT_PLAN.md  LLM_INTEGRATION_PLAN.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PLAN.md  README.md  TESTING.md  config.yaml  config_rules.yaml  findings.md  graph.yaml  index.md  log.md  log_cron.txt  progress.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  suggestions.json  task_plan.md
.claude/: settings.local.json
.obsidian/: app.json  appearance.json  graph.json
companies/: _产业链导航.md
configs/: stockinfo_config.json
docs/: ACTION_ITEMS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md  contaminated_entries_review.md  quality_report.md  quality_report_after.md  quality_report_before.md  quality_report_final.md  wiki内容质量审查报告.md  可视化使用指南.md  知识库审查报告.md
examples/: dataview_queries.md
scripts/: auto_discover.py  auto_suggest.py  backfill_metadata.py  backfill_wikilinks.py  batch_download.py  batch_download.sh  build_links.py  check_broken_links.py  classify_documents.py  cleanup_contamination.py  clip_handler.py  cninfo_download.py  collect_news.py  collect_reports.py  config.py  config_loader.py  config_rules_loader.py  contradiction_detector.py  download_missing_docs.py  download_reports.py  download_reports_v2.py  enrich.py  enrich_wiki.py  extract.py  fix_duplicates.py  fix_encoding.py  fix_wiki_encoding.py  generate_index.py  generate_slides.py  graph.py  ingest.py  ingest_with_llm.py  lint.py  llm_client.py  (+21 more)
(+1205 files in other folders)
