[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "company-wiki"
version = "0.1.0"
description = "上市公司知识库系统 — 基于 LLM 的上市公司研究知识库"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23.0"]
download = ["playwright>=1.40.0"]
all = [
    "PyMuPDF>=1.23.0",
    "playwright>=1.40.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "coverage>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
